Removed horizontal scrolling from mobile devices fixed navbar

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -11,6 +11,16 @@
   align-items: center;
 }
 
+.middleWrapper {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .heroHeading {
   font-size: 2.5vw;
 }
@@ -45,6 +55,9 @@
     flex-direction: column-reverse;
   }
 
+  .middleWrapper {
+    flex-direction: column-reverse;
+  }
   .heroHeading {
     font-size: 5.2vw;
   }
