--- a/src/components/Team/team.module.css
+++ b/src/components/Team/team.module.css
@@ -66,6 +66,16 @@
 }
 
 @media (max-width: 1024px) {
+  .container {
+    margin-top: -2rem;
+  }
+
+  .heading {
+    font-size: 6vw;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+  }
+
   .iconLinkHolder {
     display: none;
   }
