--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -4,6 +4,7 @@
 
 @media (max-width: 1024px) {
   .Container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     position: absolute;
